--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "haskellNTP"]
+[submodule "org/haskellNTP"]
 	path = org/haskellNTP
 	url = git@github.com:NapredneTehnikeProgramiranja/haskellNTP.git
+[submodule "org/org-html-themes"]
+	path = org/org-html-themes
+	url = git@github.com:fniessen/org-html-themes.git
