--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "org/org-html-themes"]
 	path = org/org-html-themes
 	url = git@github.com:fniessen/org-html-themes.git
+[submodule "org/clojure-ntp"]
+	path = org/clojure-ntp
+	url = git@github.com:NapredneTehnikeProgramiranja/clojure-ntp.git
